fixed align
Former-commit-id: 2ac0e0dba14f582910f049f89d88fd35a9e90d01

--- a/css/contents_page.css
+++ b/css/contents_page.css
@@ -121,13 +121,16 @@
     width:81%;
     margin:0px auto;
     margin-top:40px;
+    text-align: center;
 }
 
 #contents_box ul li
 {
     width: 285px;
     position:relative;
-    display: inline;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 
